tests/should_fail/deep_map.nds
-- Deeply nested map literals.
set y to {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: {1: 1}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}
